dodane źródła literaturowe

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
 - Narzędzia wspierające: narzedzia.md
 - Adaptacje sezonowe: adaptacje-sezonowe.md
 - Protokoły awaryjne: protokoly-awaryjne.md
+- Źródła literaturowe: zrodla-literaturowe.md
 site_description: Naukowe podejście do zarządzania wrażliwością meteorologiczną
 site_name: Meteoropatia - Kompleksowy Przewodnik
 theme:
